tests/fixtures/compile-errors/instantiation-too-many-type-parameters/input.nim
import strformat,options

import ../../../../dist/typecheck.macro
type Foo* = ref object of RootObj


register("Foo")
createValidator()
